authentication, editable scoringgrid, webcam
